# payments-contract

./: .gitignore  .gitpod.yml  Cargo.toml  Makefile  README.md
payments/: Cargo.toml
payments/src/: constants.rs  data.rs  errors.rs  events.rs  lib.rs  payment_processor.rs
scripts/: cep18_install.ts  cep18_transfer.ts  install_payments.ts  package-lock.json  package.json  pay.ts  transfer_to.ts
scripts/src/: common.ts
scripts/src/cep18/: index.ts  types.ts
scripts/src/payments/: index.ts  types.ts
utils/contract-utils/src/: lib.rs
